objects/ccrz__E_RelatedProduct__c.object
<CustomObject>
    <description>Object used to hold product relationships.  These relationships tie various products together, used for cross-selling or up-selling.  Also used to associated similar products, accessories for a product, and other types of custom defined relationships between varying products within the application.  This typically are displayed on the product detail and shopping cart pages.</description>
    <fields>
        <fullName>ccrz__Enabled__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Whether or not this relationship is active</description>
        <label>Enabled</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ccrz__EndDate__c</fullName>
        <defaultValue>DATEVALUE(&quot;2099-12-31&quot;)</defaultValue>
        <description>The last date that this relationship will be available/active</description>
        <label>End Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ccrz__Product__c</fullName>
        <description>Primary product</description>
        <label>Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Related Products (ProductID)</relationshipLabel>
        <relationshipName>E_RelatedProducts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ccrz__RelatedProductGroup__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Grouping/categorization of the relationship</description>
        <label>Related Product Group</label>
        <referenceTo>ccrz__E_RelatedProductGroup__c</referenceTo>
        <relationshipLabel>CC Related Products</relationshipLabel>
        <relationshipName>E_RelatedProducts</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__RelatedProductId__c</fullName>
        <description>External reference Id</description>
        <externalId>true</externalId>
        <label>Related Product Id</label>
        <length>128</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>ccrz__RelatedProductType__c</fullName>
        <description>Indicates how the related product ties to the primary product. Includes: Competitive, Related, CrossSell, UpSell, Complementary, Accessories, but can contain custom values.</description>
        <label>Related Product Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Competitive</fullName>
                </value>
                <value>
                    <fullName>Related</fullName>
                </value>
                <value>
                    <fullName>RequiredItem</fullName>
                </value>
                <value>
                    <fullName>CrossSell</fullName>
                </value>
                <value>
                    <fullName>UpSell</fullName>
                </value>
                <value>
                    <fullName>Complementary</fullName>
                </value>
                <value>
                    <fullName>Accessories</fullName>
                </value>
                <value>
                    <fullName>Superseded</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ccrz__RelatedProduct__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The related product</description>
        <label>Related Product</label>
        <referenceTo>ccrz__E_Product__c</referenceTo>
        <relationshipLabel>Related To (RelatedProductID)</relationshipLabel>
        <relationshipName>E_RelatedProducts1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ccrz__RelationshipDescription__c</fullName>
        <description>Describes the relationship and any additional contextual information that might be relevant.</description>
        <label>Relationship Description</label>
        <length>1000</length>
        <type>Html</type>
    </fields>
    <fields>
        <fullName>ccrz__Sequence__c</fullName>
        <defaultValue>500</defaultValue>
        <description>Ordering of the related products when displayed as a list.</description>
        <label>Sequence</label>
        <precision>8</precision>
        <required>true</required>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ccrz__ShortDesc__c</fullName>
        <description>The short description of this relationship.</description>
        <label>ShortDesc</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ccrz__StartDate__c</fullName>
        <defaultValue>Today()</defaultValue>
        <description>The first date that this relationship will be available/active</description>
        <label>Start Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <label>CC Related Product</label>
    <listViews>
        <fullName>ccrz__All</fullName>
        <columns>ccrz__RelatedProductType__c</columns>
        <columns>ccrz__Product__c</columns>
        <columns>ccrz__RelatedProduct__c</columns>
        <columns>ccrz__Sequence__c</columns>
        <columns>ccrz__Enabled__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <listViews>
        <fullName>ccrz__All1</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>{000000}</displayFormat>
        <label>RelatedAutoNumber</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>CC Related Products</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>